WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162389
CachedXSLStylesheet does not need to be updated according Origin/Fetch mode
https://bugs.webkit.org/show_bug.cgi?id=162389
Summary
CachedXSLStylesheet does not need to be updated according Origin/Fetch mode
youenn fablet
Reported
2016-09-22 06:44:25 PDT
No CORS check is done and loading is always same origin.
Attachments
Patch
(4.91 KB, patch)
2016-09-22 06:48 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.92 KB, patch)
2016-10-06 22:45 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-09-22 06:48:16 PDT
Created
attachment 289558
[details]
Patch
Darin Adler
Comment 2
2016-10-06 20:23:38 PDT
Comment on
attachment 289558
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=289558&action=review
> Source/WebCore/loader/cache/CachedResource.cpp:449 > + ASSERT(type() != CachedResource::Type::FontResource || type() != CachedResource::Type::SVGFontResource);
This assertion will never fire; the expression will always be true. Please fix this by making this into two separate assertions.
youenn fablet
Comment 3
2016-10-06 22:45:51 PDT
Created
attachment 290898
[details]
Patch for landing
youenn fablet
Comment 4
2016-10-06 22:46:30 PDT
Thanks for the review.
> > Source/WebCore/loader/cache/CachedResource.cpp:449 > > + ASSERT(type() != CachedResource::Type::FontResource || type() != CachedResource::Type::SVGFontResource); > > This assertion will never fire; the expression will always be true. Please > fix this by making this into two separate assertions.
Right, done.
WebKit Commit Bot
Comment 5
2016-10-06 23:21:08 PDT
Comment on
attachment 290898
[details]
Patch for landing Clearing flags on attachment: 290898 Committed
r206902
: <
http://trac.webkit.org/changeset/206902
>
WebKit Commit Bot
Comment 6
2016-10-06 23:21:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug